--- a/platformio.ini
+++ b/platformio.ini
@@ -16,13 +16,13 @@ monitor_speed = 115200
 
 ; Library Dependencies (OTA and CAN task-based libraries)
 lib_deps =
-    git@homeserver.local:TrailCurrent/OtaUpdateLibraryWROOM32.git@0.0.1
-    git@homeserver.local:TrailCurrent/TwaiTaskBasedLibraryWROOM32.git@0.0.1
+    git@github.com:trailcurrentoss/OtaUpdateLibraryWROOM32.git    
+    git@github.com:trailcurrentoss/TwaiTaskBasedLibraryWROOM32.git
 
 ; Partition Table for OTA (dual partitions for safe updates)
 board_build.partitions = data/partitions.csv
 
 ; OTA Upload configuration (uncomment after first serial upload)
 upload_protocol = espota
-upload_port = esp32-e91ef8  ; Replace with device MAC (e.g., esp32-8A3B4C))
+upload_port = esp32-xxxxxx  ; Replace with device MAC (e.g., esp32-xxxxxx))
 ; upload_flags = --auth=<password>
