Removed espota since initial firmware will be loaded via USB and subsequent will be from OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,6 @@ lib_deps =
 board_build.partitions = data/partitions.csv
 
 ; OTA Upload configuration (uncomment after first serial upload)
-upload_protocol = espota
-upload_port = esp32-xxxxxx  ; Replace with device MAC (e.g., esp32-xxxxxx))
+;upload_protocol = espota
+;upload_port = esp32-xxxxxx  ; Replace with device MAC (e.g., esp32-xxxxxx))
 ; upload_flags = --auth=<password>
