Switched to debug library and twai with freertos task

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,14 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
-; Library Dependencies (OTA and CAN task-based libraries)
+; Build flags
+build_flags = -DDEBUG=1
+
+; Library Dependencies (OTA, CAN task-based, and debug libraries)
 lib_deps =
-    git@github.com:trailcurrentoss/OtaUpdateLibraryWROOM32.git    
+    git@github.com:trailcurrentoss/OtaUpdateLibraryWROOM32.git
     git@github.com:trailcurrentoss/TwaiTaskBasedLibraryWROOM32.git
+    git@github.com:trailcurrentoss/ESP32ArduinoDebugLibrary.git
 
 ; Partition Table for OTA (dual partitions for safe updates)
 board_build.partitions = data/partitions.csv
